--- a/VerloxsAutoexec/Verloxs/bind.cfg
+++ b/VerloxsAutoexec/Verloxs/bind.cfg
@@ -23,9 +23,9 @@ bind "scancode31"     "slot2"                                   // [2] Equip: Se
 bind "scancode32"     "slot3"                                   // [3] Equip: Knife, Zeus or Hands (dangerzone).
 bind "scancode33"     "slot4"                                   // [4] Equip: Grenades [cycle] (same as 'invnextgrenade').
 bind "scancode34"     "slot5"                                   // [5] Equip: C4 Explosive or Medi-Shot.
-bind "scancode35"     "radio1"                                  // [6] Radio 1  
-bind "scancode36"     "radio2"                                  // [7] Radio 2  
-bind "scancode37"     "radio3"                                  // [8] Radio 3  
+bind "scancode35"     ""                                        // [6] 
+bind "scancode36"     ""                                        // [7] 
+bind "scancode37"     ""                                        // [8]  
 bind "scancode38"     ""                                        // [9] 
 bind "scancode39"     ""                                        // [0] 
 bind "scancode20"     "invnext"                                 // [q] Next Weapon
