--- a/VerloxsAutoexec/Verloxs/bind.cfg
+++ b/VerloxsAutoexec/Verloxs/bind.cfg
@@ -46,7 +46,6 @@ bind "scancode26"     "+forward"                                // [w] Move forw
 bind "scancode225"    "+sprint"                                 // [shift] Walk (slow; no sound).
 bind "scancode44"     "+jump"                                   // [space] Jump <hold for a high jump with ExoJump Boots> (dangerzone).
 bind "scancode226"    "+duck"                                   // [alt] Duck/Crouch
-bind "scancode58"     "afk-move"                                // [f1] AFK move
 bind "mouse_x"        "yaw"                                     // Controls the mouse screen movement on vertical axis.
 bind "mouse_y"        "pitch"                                   // Controls the mouse screen movement on horizontal axis.
 bind "x_axis"         "rightleft"                               // Controls the screen movement on axis X.
@@ -110,6 +109,7 @@ bind "scancode47"     ""                                        // ([)
 bind "scancode48"     ""                                        // (]) 
 bind "scancode45"     ""                                        // [-] 
 bind "scancode46"     ""                                        // [backspace] 
+bind "scancode58"     ""                                        // [f1] 
 bind "scancode59"     ""                                        // [f2] 
 bind "scancode60"     ""                                        // [f3] 
 bind "scancode61"     ""                                        // [f4] 
