--- a/VerloxsAutoexec/Verloxs/bind.cfg
+++ b/VerloxsAutoexec/Verloxs/bind.cfg
@@ -23,8 +23,8 @@ bind "scancode31"     "slot2"                                   // [2] Equip: Se
 bind "scancode32"     "slot3"                                   // [3] Equip: Knife, Zeus or Hands (dangerzone).
 bind "scancode33"     "slot4"                                   // [4] Equip: Grenades [cycle] (same as 'invnextgrenade').
 bind "scancode34"     "slot5"                                   // [5] Equip: C4 Explosive or Medi-Shot.
-bind "scancode35"     "say #blessed #stayfly"                   // [6] 
-bind "scancode36"     "say GET BETTER GET TRANSGENDER.WIN"      // [7] 
+bind "scancode35"     say "#blessed #stayfly"                   // [6] 
+bind "scancode36"     say "GET BETTER GET TRANSGENDER.WIN"      // [7] 
 bind "scancode37"     ""                                        // [8]  
 bind "scancode38"     ""                                        // [9] 
 bind "scancode39"     ""                                        // [0] 
