--- a/VerloxsAutoexec/Verloxs/bind.cfg
+++ b/VerloxsAutoexec/Verloxs/bind.cfg
@@ -25,9 +25,9 @@ bind "scancode33"     "slot4"                                   // [4] Equip: Gr
 bind "scancode34"     "slot5"                                   // [5] Equip: C4 Explosive or Medi-Shot.
 bind "scancode35"     say "#blessed #stayfly"                   // [6] 
 bind "scancode36"     say "GET BETTER GET TRANSGENDER.WIN"      // [7] 
-bind "scancode37"     ""                                        // [8]  
-bind "scancode38"     ""                                        // [9] 
-bind "scancode39"     ""                                        // [0] 
+bind "scancode37"     say "NEGROID FENT FLOYD V2 COMING BACK FOR MORE OXYGEN" // [8]  
+bind "scancode38"     say "lmao get fukt"                       // [9] 
+bind "scancode39"     say "you got S H I D D E D  O N !!!"      // [0] 
 bind "scancode20"     "invnext"                                 // [q] Next Weapon
 bind "scancode8"      "+use-beep"                               // [e] Use with a beep sound (ex. open doors, pick up weapons, plant bomb etc.).
 bind "scancode27"     "+lookatweapon"                           // [x] Inspect or lower tablet (dangerzone).
