--- a/VerloxsAutoexec/Verloxs/bind.cfg
+++ b/VerloxsAutoexec/Verloxs/bind.cfg
@@ -23,11 +23,14 @@ bind "scancode31"     "slot2"                                   // [2] Equip: Se
 bind "scancode32"     "slot3"                                   // [3] Equip: Knife, Zeus or Hands (dangerzone).
 bind "scancode33"     "slot4"                                   // [4] Equip: Grenades [cycle] (same as 'invnextgrenade').
 bind "scancode34"     "slot5"                                   // [5] Equip: C4 Explosive or Medi-Shot.
-bind "scancode35"     say "#VAC has detected irregular gameplay and has cancelled the match." // [6] 
-bind "scancode36"     say "GET BETTER GET TRANSGENDER.WIN"      // [7] 
-bind "scancode37"     say "NEGROID FENT FLOYD V2 COMING BACK FOR MORE OXYGEN" // [8]  
-bind "scancode38"     say "lmao get fukt"                       // [9] 
-bind "scancode39"     say "you got S H I D D E D  O N !!!"      // [0] 
+bind "scancode35"     say "𝗩𝗔𝗖 𝗛𝗔𝗦 𝗗𝗘𝗧𝗘𝗖𝗧𝗘𝗗 𝗜𝗥𝗥𝗘𝗚𝗨𝗟𝗔𝗥 𝗚𝗔𝗠𝗘𝗣𝗟𝗔𝗬 𝗔𝗡𝗗 𝗛𝗔𝗦 𝗖𝗔𝗡𝗖𝗘𝗟𝗟𝗘𝗗 𝗧𝗛𝗘 𝗠𝗔𝗧𝗖𝗛." // [6] 
+bind "scancode36"     say "𝗚𝗘𝗧 𝗚𝗢𝗢𝗗? 𝗡𝗔𝗛. 𝗚𝗘𝗧 𝗣𝗥𝗜𝗠𝗢𝗥𝗗𝗜𝗔𝗟."    // [7] 
+bind "scancode37"     say "BETTER NOT BLOCK THAT ASS WITH YOUR HANDS OR DADDYS GONNA HIT HARDER" // [8]  
+bind "scancode38"     say "GUNNY GOON AND BOP MY LITTLE PP ON MY DESK TILL I CUM BOOGERS OUT MY BOOTY"                       // [9] 
+bind "scancode39"     say "🆃🅷🅰🆃’🆂 🅽🅾🆃 🅰🅸🅼 🅰🆂🆂🅸🆂🆃 — 🆃🅷🅰🆃’🆂 🅳🅸🆅🅸🅽🅴 🅸🅽🆃🅴🆁🆅🅴🅽🆃🅸🅾🅽."      // [0] 
+bind "scancode45"     say "I hope that when ur fisting urself to ur little magazines you get a paper cut on your dick then u get gangrene and the bitch falls off ^_^" // [-] 
+bind "scancode47"     say "Single blk man looking for a single female who need or looking for stability in there life. Must be willing to be a live in female without the drama. Must be drug free, honest, caring." // ([) 
+bind "scancode48"     say "PULL UP UR PANTS YOUNG MAN!"             // (]) 
 bind "scancode20"     "invnext"                                 // [q] Next Weapon
 bind "scancode8"      "+use-beep"                               // [e] Use with a beep sound (ex. open doors, pick up weapons, plant bomb etc.).
 bind "scancode27"     "+lookatweapon"                           // [x] Inspect or lower tablet (dangerzone).
@@ -105,9 +108,6 @@ bind "scancode56"     ""                                        // [/]
 bind "scancode51"     ""                                        // [;] 
 bind "scancode52"     ""                                        // ['] 
 bind "scancode49"     ""                                        // [\] 
-bind "scancode47"     ""                                        // ([) 
-bind "scancode48"     ""                                        // (]) 
-bind "scancode45"     ""                                        // [-] 
 bind "scancode46"     ""                                        // [backspace] 
 bind "scancode58"     ""                                        // [f1] 
 bind "scancode59"     ""                                        // [f2] 
