--- a/VerloxsAutoexec/Verloxs/bind.cfg
+++ b/VerloxsAutoexec/Verloxs/bind.cfg
@@ -24,13 +24,17 @@ bind "scancode32"     "slot3"                                   // [3] Equip: Kn
 bind "scancode33"     "slot4"                                   // [4] Equip: Grenades [cycle] (same as 'invnextgrenade').
 bind "scancode34"     "slot5"                                   // [5] Equip: C4 Explosive or Medi-Shot.
 bind "scancode35"     say "𝗩𝗔𝗖 𝗛𝗔𝗦 𝗗𝗘𝗧𝗘𝗖𝗧𝗘𝗗 𝗜𝗥𝗥𝗘𝗚𝗨𝗟𝗔𝗥 𝗚𝗔𝗠𝗘𝗣𝗟𝗔𝗬 𝗔𝗡𝗗 𝗛𝗔𝗦 𝗖𝗔𝗡𝗖𝗘𝗟𝗟𝗘𝗗 𝗧𝗛𝗘 𝗠𝗔𝗧𝗖𝗛." // [6] 
-bind "scancode36"     say "𝗚𝗘𝗧 𝗚𝗢𝗢𝗗? 𝗡𝗔𝗛. 𝗚𝗘𝗧 𝗣𝗥𝗜𝗠𝗢𝗥𝗗𝗜𝗔𝗟."    // [7] 
-bind "scancode37"     say "BETTER NOT BLOCK THAT ASS WITH YOUR HANDS OR DADDYS GONNA HIT HARDER" // [8]  
-bind "scancode38"     say "GUNNY GOON AND BOP MY LITTLE PP ON MY DESK TILL I CUM BOOGERS OUT MY BOOTY"                       // [9] 
-bind "scancode39"     say "🆃🅷🅰🆃’🆂 🅽🅾🆃 🅰🅸🅼 🅰🆂🆂🅸🆂🆃 — 🆃🅷🅰🆃’🆂 🅳🅸🆅🅸🅽🅴 🅸🅽🆃🅴🆁🆅🅴🅽🆃🅸🅾🅽."      // [0] 
-bind "scancode45"     say "I hope that when ur fisting urself to ur little magazines you get a paper cut on your dick then u get gangrene and the bitch falls off ^_^" // [-] 
+bind "scancode36"     say "𝗚𝗘𝗧 𝗚𝗢𝗢𝗗? 𝗡𝗔𝗛. 𝗚𝗘𝗧 𝗣𝗥𝗜𝗠𝗢𝗥𝗗𝗜𝗔𝗟."   // [7] 
+bind "scancode37"     say "LMFAO"                               // [8]  
+bind "scancode38"     say "WHY YOU MAD THO????"                 // [9] 
+bind "scancode39"     say "YOU MAD ASF HAHA"                    // [0] 
+bind "scancode45"     say "WHY YOU LOG IN JUST TO GET MAD LMFAO"// [-] 
 bind "scancode47"     say "Single blk man looking for a single female who need or looking for stability in there life. Must be willing to be a live in female without the drama. Must be drug free, honest, caring." // ([) 
-bind "scancode48"     say "PULL UP UR PANTS YOUNG MAN!"             // (]) 
+bind "scancode48"     say "PULL UP UR PANTS YOUNG MAN!"          // (]) 
+bind "scancode56"     say "FADED THEN A HOE"                     // [/] 
+bind "scancode51"     say "RAN OUTTA PERCS IM MAD"               // [;] 
+bind "scancode52"     say "卐卐 TOTAL ✠ //lGGER ✠ DEATH 卐卐"   // ['] 
+bind "scancode49"     say "MOMMY I WANT UPPIES"                 // [\] 
 bind "scancode20"     "invnext"                                 // [q] Next Weapon
 bind "scancode8"      "+use-beep"                               // [e] Use with a beep sound (ex. open doors, pick up weapons, plant bomb etc.).
 bind "scancode27"     "+lookatweapon"                           // [x] Inspect or lower tablet (dangerzone).
@@ -104,10 +108,6 @@ bind "scancode40"     ""                                        // [enter]
 bind "scancode42"     ""                                        // [backspace] 
 bind "scancode73"     ""                                        // [ins] 
 bind "scancode230"    ""                                        // [ralt] 
-bind "scancode56"     ""                                        // [/] 
-bind "scancode51"     ""                                        // [;] 
-bind "scancode52"     ""                                        // ['] 
-bind "scancode49"     ""                                        // [\] 
 bind "scancode46"     ""                                        // [backspace] 
 bind "scancode58"     ""                                        // [f1] 
 bind "scancode59"     ""                                        // [f2] 
