--- a/VerloxsAutoexec/Verloxs/bind.cfg
+++ b/VerloxsAutoexec/Verloxs/bind.cfg
@@ -1,4 +1,4 @@
-// Remove all existing binds.
+a// Remove all existing binds.
 unbindall
 
 // Updates game keyboard layout to the current Windows keyboard setting.
@@ -23,8 +23,8 @@ bind "scancode31"     "slot2"                                   // [2] Equip: Se
 bind "scancode32"     "slot3"                                   // [3] Equip: Knife, Zeus or Hands (dangerzone).
 bind "scancode33"     "slot4"                                   // [4] Equip: Grenades [cycle] (same as 'invnextgrenade').
 bind "scancode34"     "slot5"                                   // [5] Equip: C4 Explosive or Medi-Shot.
-bind "scancode35"     say "𝗩𝗔𝗖 𝗛𝗔𝗦 𝗗𝗘𝗧𝗘𝗖𝗧𝗘𝗗 𝗜𝗥𝗥𝗘𝗚𝗨𝗟𝗔𝗥 𝗚𝗔𝗠𝗘𝗣𝗟𝗔𝗬 𝗔𝗡𝗗 𝗛𝗔𝗦 𝗖𝗔𝗡𝗖𝗘𝗟𝗟𝗘𝗗 𝗧𝗛𝗘 𝗠𝗔𝗧𝗖𝗛." // [6] 
-bind "scancode36"     say "𝗚𝗘𝗧 𝗚𝗢𝗢𝗗? 𝗡𝗔𝗛. 𝗚𝗘𝗧 𝗣𝗥𝗜𝗠𝗢𝗥𝗗𝗜𝗔𝗟."   // [7] 
+bind "scancode35"     say "𝕚 𝕨𝕚𝕡𝕖 𝕥𝕙𝕖 𝕗𝕝𝕠𝕠𝕣 𝕒𝕗𝕥𝕖𝕣 𝕚 𝕜𝕚𝕝𝕝 𝕪𝕠𝕦 𝕓𝕖𝕔𝕒𝕦𝕤𝕖 𝕚 𝕣𝕖𝕤𝕡𝕖𝕔𝕥 𝕪𝕠𝕦 𝕗𝕒𝕞𝕚𝕝𝕪" // [6] 
+bind "scancode36"     say "𝔾𝕝𝕒𝕤𝕤𝕖𝕤 𝕖𝕟𝕙𝕒𝕟𝕤𝕖 𝕞𝕪 𝕘𝕒𝕞𝕖𝕡𝕝𝕒𝕪 𝕒𝕟𝕕 𝕫𝕠𝕠𝕞 𝕚𝕟 𝕪𝕠𝕦 𝕨𝕙𝕖𝕟 𝕚 ℍ$ 𝕪𝕠𝕦 𝕚𝕟 ℍ𝔻 𝕒𝕟𝕕 𝕘𝕖𝕥 𝕖𝕒𝕤𝕪 𝕨𝕚𝕟 𝕗𝕠𝕣 𝕞𝕪 𝕗𝕒𝕞𝕚𝕝𝕪"   // [7] 
 bind "scancode37"     say "LMFAO"                               // [8]  
 bind "scancode38"     say "WHY YOU MAD THO????"                 // [9] 
 bind "scancode39"     say "YOU MAD ASF HAHA"                    // [0] 
@@ -33,7 +33,7 @@ bind "scancode47"     say "Single blk man looking for a single female who need o
 bind "scancode48"     say "PULL UP UR PANTS YOUNG MAN!"          // (]) 
 bind "scancode56"     say "FADED THEN A HOE"                     // [/] 
 bind "scancode51"     say "RAN OUTTA PERCS IM MAD"               // [;] 
-bind "scancode52"     say "卐卐 TOTAL ✠ //lGGER ✠ DEATH 卐卐"   // ['] 
+bind "scancode52"     say "𝕚 𝕨𝕚𝕡𝕖 𝕥𝕙𝕖 𝕗𝕝𝕠𝕠𝕣 𝕒𝕗𝕥𝕖𝕣 𝕚 𝕜𝕚𝕝𝕝 𝕪𝕠𝕦 𝕓𝕖𝕔𝕒𝕦𝕤𝕖 𝕚 𝕣𝕖𝕤𝕡𝕖𝕔𝕥 𝕪𝕠𝕦 𝕗𝕒𝕞𝕚𝕝𝕪"   // ['] 
 bind "scancode49"     say "MOMMY I WANT UPPIES"                 // [\] 
 bind "scancode20"     "invnext"                                 // [q] Next Weapon
 bind "scancode8"      "+use-beep"                               // [e] Use with a beep sound (ex. open doors, pick up weapons, plant bomb etc.).
