--- a/VerloxsAutoexec/Verloxs/bind.cfg
+++ b/VerloxsAutoexec/Verloxs/bind.cfg
@@ -25,16 +25,20 @@ bind "scancode33"     "slot4"                                   // [4] Equip: Gr
 bind "scancode34"     "slot5"                                   // [5] Equip: C4 Explosive or Medi-Shot.
 bind "scancode35"     say "𝕚 𝕨𝕚𝕡𝕖 𝕥𝕙𝕖 𝕗𝕝𝕠𝕠𝕣 𝕒𝕗𝕥𝕖𝕣 𝕚 𝕜𝕚𝕝𝕝 𝕪𝕠𝕦 𝕓𝕖𝕔𝕒𝕦𝕤𝕖 𝕚 𝕣𝕖𝕤𝕡𝕖𝕔𝕥 𝕪𝕠𝕦 𝕗𝕒𝕞𝕚𝕝𝕪" // [6] 
 bind "scancode36"     say "𝔾𝕝𝕒𝕤𝕤𝕖𝕤 𝕖𝕟𝕙𝕒𝕟𝕤𝕖 𝕞𝕪 𝕘𝕒𝕞𝕖𝕡𝕝𝕒𝕪 𝕒𝕟𝕕 𝕫𝕠𝕠𝕞 𝕚𝕟 𝕪𝕠𝕦 𝕨𝕙𝕖𝕟 𝕚 ℍ$ 𝕪𝕠𝕦 𝕚𝕟 ℍ𝔻 𝕒𝕟𝕕 𝕘𝕖𝕥 𝕖𝕒𝕤𝕪 𝕨𝕚𝕟 𝕗𝕠𝕣 𝕞𝕪 𝕗𝕒𝕞𝕚𝕝𝕪"   // [7] 
-bind "scancode37"     say "LMFAO"                               // [8]  
-bind "scancode38"     say "WHY YOU MAD THO????"                 // [9] 
-bind "scancode39"     say "YOU MAD ASF HAHA"                    // [0] 
-bind "scancode45"     say "WHY YOU LOG IN JUST TO GET MAD LMFAO"// [-] 
+bind "scancode37"     say "you are doomed like this boolet coming in high speed to you brain, INSANE IN THE BRAIN. I am chill."                               // [8]  
+bind "scancode38"     say "Glasses enhanse my gameplay and zoom in when i H$ you in HD and get easy win for my family"                 // [9] 
+bind "scancode39"     say "When you are on ground having boring i an in my golden jet with my bands"                    // [0] 
+bind "scancode45"     say "I am sad to the touch butt my mind is fureyous like a tyger. you dont mess with the bo$$ of the world"// [-] 
 bind "scancode47"     say "Single blk man looking for a single female who need or looking for stability in there life. Must be willing to be a live in female without the drama. Must be drug free, honest, caring." // ([) 
-bind "scancode48"     say "PULL UP UR PANTS YOUNG MAN!"          // (]) 
-bind "scancode56"     say "FADED THEN A HOE"                     // [/] 
-bind "scancode51"     say "RAN OUTTA PERCS IM MAD"               // [;] 
-bind "scancode52"     say "𝕚 𝕨𝕚𝕡𝕖 𝕥𝕙𝕖 𝕗𝕝𝕠𝕠𝕣 𝕒𝕗𝕥𝕖𝕣 𝕚 𝕜𝕚𝕝𝕝 𝕪𝕠𝕦 𝕓𝕖𝕔𝕒𝕦𝕤𝕖 𝕚 𝕣𝕖𝕤𝕡𝕖𝕔𝕥 𝕪𝕠𝕦 𝕗𝕒𝕞𝕚𝕝𝕪"   // ['] 
-bind "scancode49"     say "MOMMY I WANT UPPIES"                 // [\] 
+bind "scancode48"     say "Botty get shot with the shotty now im sitting on the potty because i have severe diabeates"          // (]) 
+bind "scancode56"     say "Other pepol are shooting aer. But me HS you. now all family disrespect but it fine because the world what it is!"                     // [/] 
+bind "scancode51"     say "You life go like you mother own you him mother own him then i own him as my slave because i buyed it all then kill alll"               // [;] 
+bind "scancode52"     say "Blood pores from top of DE_MIRAGE but police wonrder who blood is? it you blood i explode you with shootgun"   // ['] 
+bind "scancode49"     say "Counter terrorst win ? true here beavuse you country is terrorist but my counrty is rich and you live slums"                 // [\] 
+bind "scancode6"      say "Midle east need to learn bomb defusual tacktiks for counter terrosits and all countryes bow down to me lebanon king"                                        // [c] 
+bind "scancode9"      say "Nifed you like i peeky blinders, you die like mohammed back in the days when you younger bot"                                        // [f] 
+bind "scancode29"     say "When i walk up ladder you look with rifel. I shoot befor and sniper you. You are now on ground with family (DOG)"                                        // [z] 
+
 bind "scancode20"     "invnext"                                 // [q] Next Weapon
 bind "scancode8"      "+use-beep"                               // [e] Use with a beep sound (ex. open doors, pick up weapons, plant bomb etc.).
 bind "scancode27"     "+lookatweapon"                           // [x] Inspect or lower tablet (dangerzone).
@@ -82,9 +86,6 @@ bind "mouse3"         "player_ping"                             // Ping
 bind "mouse4"         "+voicerecord"                            // Voice <push to talk; only with teammates in matchmaking>. 
 
 // Unbound.
-bind "scancode6"      ""                                        // [c] 
-bind "scancode9"      ""                                        // [f] 
-bind "scancode29"     ""                                        // [z] 
 bind "scancode25"     ""                                        // [v] 
 bind "scancode17"     ""                                        // [n] 
 bind "scancode18"     ""                                        // [o] 
