--- a/VerloxsAutoexec/Verloxs/bind.cfg
+++ b/VerloxsAutoexec/Verloxs/bind.cfg
@@ -24,21 +24,22 @@ bind "scancode32"     "slot3"                                   // [3] Equip: Kn
 bind "scancode33"     "slot4"                                   // [4] Equip: Grenades [cycle] (same as 'invnextgrenade').
 bind "scancode34"     "slot5"                                   // [5] Equip: C4 Explosive or Medi-Shot.
 bind "scancode35"     say "𝕚 𝕨𝕚𝕡𝕖 𝕥𝕙𝕖 𝕗𝕝𝕠𝕠𝕣 𝕒𝕗𝕥𝕖𝕣 𝕚 𝕜𝕚𝕝𝕝 𝕪𝕠𝕦 𝕓𝕖𝕔𝕒𝕦𝕤𝕖 𝕚 𝕣𝕖𝕤𝕡𝕖𝕔𝕥 𝕪𝕠𝕦 𝕗𝕒𝕞𝕚𝕝𝕪" // [6] 
-bind "scancode36"     say "𝔾𝕝𝕒𝕤𝕤𝕖𝕤 𝕖𝕟𝕙𝕒𝕟𝕤𝕖 𝕞𝕪 𝕘𝕒𝕞𝕖𝕡𝕝𝕒𝕪 𝕒𝕟𝕕 𝕫𝕠𝕠𝕞 𝕚𝕟 𝕪𝕠𝕦 𝕨𝕙𝕖𝕟 𝕚 ℍ$ 𝕪𝕠𝕦 𝕚𝕟 ℍ𝔻 𝕒𝕟𝕕 𝕘𝕖𝕥 𝕖𝕒𝕤𝕪 𝕨𝕚𝕟 𝕗𝕠𝕣 𝕞𝕪 𝕗𝕒𝕞𝕚𝕝𝕪"   // [7] 
-bind "scancode37"     say "you are doomed like this boolet coming in high speed to you brain, INSANE IN THE BRAIN. I am chill."                               // [8]  
-bind "scancode38"     say "Glasses enhanse my gameplay and zoom in when i H$ you in HD and get easy win for my family"                 // [9] 
-bind "scancode39"     say "When you are on ground having boring i an in my golden jet with my bands"                    // [0] 
-bind "scancode45"     say "I am sad to the touch butt my mind is fureyous like a tyger. you dont mess with the bo$$ of the world"// [-] 
+bind "scancode36"     say "𝔾𝕝𝕒𝕤𝕤𝕖𝕤 𝕖𝕟𝕙𝕒𝕟𝕤𝕖 𝕞𝕪 𝕘𝕒𝕞𝕖𝕡𝕝𝕒𝕪 𝕒𝕟𝕕 𝕫𝕠𝕠𝕞 𝕚𝕟 𝕪𝕠𝕦 𝕨𝕙𝕖𝕟 𝕚 ℍ$ 𝕪𝕠𝕦 𝕚𝕟 ℍ𝔻 𝕒𝕟𝕕 𝕘𝕖𝕥 𝕖𝕒𝕤𝕪 𝕨𝕚𝕟 𝕗𝕠𝕣 𝕞𝕪 𝕗𝕒𝕞𝕚𝕝𝕪" // [7] 
+bind "scancode37"     say "you are doomed like this boolet coming in high speed to you brain, INSANE IN THE BRAIN. I am chill." // [8]  
+bind "scancode38"     say "Glasses enhanse my gameplay and zoom in when i H$ you in HD and get easy win for my family" // [9] 
+bind "scancode39"     say "When you are on ground having boring i an in my golden jet with my bands" // [0] 
+bind "scancode45"     say "I am sad to the touch butt my mind is fureyous like a tyger. you dont mess with the bo$$ of the world" // [-] 
 bind "scancode47"     say "Single blk man looking for a single female who need or looking for stability in there life. Must be willing to be a live in female without the drama. Must be drug free, honest, caring." // ([) 
-bind "scancode48"     say "Botty get shot with the shotty now im sitting on the potty because i have severe diabeates"          // (]) 
-bind "scancode56"     say "Other pepol are shooting aer. But me HS you. now all family disrespect but it fine because the world what it is!"                     // [/] 
-bind "scancode51"     say "You life go like you mother own you him mother own him then i own him as my slave because i buyed it all then kill alll"               // [;] 
-bind "scancode52"     say "Blood pores from top of DE_MIRAGE but police wonrder who blood is? it you blood i explode you with shootgun"   // ['] 
-bind "scancode49"     say "Counter terrorst win ? true here beavuse you country is terrorist but my counrty is rich and you live slums"                 // [\] 
-bind "scancode6"      say "Midle east need to learn bomb defusual tacktiks for counter terrosits and all countryes bow down to me lebanon king"                                        // [c] 
-bind "scancode9"      say "Nifed you like i peeky blinders, you die like mohammed back in the days when you younger bot"                                        // [f] 
-bind "scancode29"     say "When i walk up ladder you look with rifel. I shoot befor and sniper you. You are now on ground with family (DOG)"                                        // [z] 
-
+bind "scancode48"     say "Botty get shot with the shotty now im sitting on the potty because i have severe diabeates" // (]) 
+bind "scancode56"     say "Other pepol are shooting aer. But me HS you. now all family disrespect but it fine because the world what it is!" // [/] 
+bind "scancode51"     say "You life go like you mother own you him mother own him then i own him as my slave because i buyed it all then kill alll" // [;] 
+bind "scancode52"     say "Blood pores from top of DE_MIRAGE but police wonrder who blood is? it you blood i explode you with shootgun" // ['] 
+bind "scancode49"     say "Counter terrorst win ? true here beavuse you country is terrorist but my counrty is rich and you live slums" // [\] 
+bind "scancode6"      say "Midle east need to learn bomb defusual tacktiks for counter terrosits and all countryes bow down to me lebanon king" // [c] 
+bind "scancode9"      say "Nifed you like i peeky blinders, you die like mohammed back in the days when you younger bot" // [f] 
+bind "scancode29"     say "When i walk up ladder you look with rifel. I shoot befor and sniper you. You are now on ground with family (DOG)" // [z] 
+bind "scancode54"     say "Bullot come, bullet go, i stay owning. Hs Here Hs There you are not here." // [,] 
+bind "scancode55"     say "Thanks allah for him making Me HS you, JOKE i always kill...." // [.] 
 bind "scancode20"     "invnext"                                 // [q] Next Weapon
 bind "scancode8"      "+use-beep"                               // [e] Use with a beep sound (ex. open doors, pick up weapons, plant bomb etc.).
 bind "scancode27"     "+lookatweapon"                           // [x] Inspect or lower tablet (dangerzone).
@@ -77,8 +78,6 @@ bind "scancode24"     "messagemode2"                            // [y] Team mess
 bind "scancode28"     "messagemode"                             // [u] Message to all (chat with all).
 bind "scancode5"      "buymenu"                                 // [b] Buy menu/Tablet delivery (dangerzone)
 bind "scancode53"     "toggleconsole"                           // [`] Open the developer console.
-bind "scancode54"     "exec autoexec.cfg"                       // [,] Execute the autoexec.cfg.
-bind "scancode55"     "exec config.cfg"                         // [.] Execute the config.cfg.
 bind "scancode41"     "cancelselect"                            // [esc] Open/close the game menu.
 bind "scancode43"     "+scores-fps"                             // [tab] Scoreboard and fps <hold to show> (dangerzone).
 bind "scancode76"     "sellbackall"                             // [del] Refund all
