--- a/VerloxsAutoexec/Verloxs/bind.cfg
+++ b/VerloxsAutoexec/Verloxs/bind.cfg
@@ -40,90 +40,90 @@ bind "scancode9"      say "Nifed you like i peeky blinders, you die like mohamme
 bind "scancode29"     say "When i walk up ladder you look with rifel. I shoot befor and sniper you. You are now on ground with family (DOG)" // [z] 
 bind "scancode54"     say "Bullot come, bullet go, i stay owning. Hs Here Hs There you are not here." // [,] 
 bind "scancode55"     say "Thanks allah for him making Me HS you, JOKE i always kill...." // [.] 
-bind "scancode20"     "invnext"                                 // [q] Next Weapon
-bind "scancode8"      "+use-beep"                               // [e] Use with a beep sound (ex. open doors, pick up weapons, plant bomb etc.).
-bind "scancode27"     "+lookatweapon"                           // [x] Inspect or lower tablet (dangerzone).
-bind "scancode10"     "drop"                                    // [g] Drop weapon.
-bind "scancode11"     "+bomb-drop"                              // [h] Fast bomb drop.
-bind "scancode21"     "+reload"                                 // [r] Reload.
-bind "scancode23"     "+spray_menu"                             // [t] Spray.
-bind "mouse1"         "+attack"                                 // Shoot, plant, inject medi-shot, cycle forward and do hand jab [fast punch] (dangerzone).
-bind "mouse2"         "+attack2"                                // Zoom, toggle silencer/brust, cycle backward and do hand cross [charged punch] (dangerzone).
+bind "scancode25"     say "She can paint a pretrty pikture but story has a twist. Da paintbursh is razer and canvas is a wrist" // [v] 
+bind "scancode17"     say "Just because i were black and keep private life journal, that doesnt mean i will blow up house or terrorires mindless peopl, for that matter" // [n] 
+bind "scancode18"     say "Start to respect you elders but you cant respect me if you are dead bot" // [o] 
+bind "scancode19"     say "You luckyer that when i hs i would nife you in backstab" // [p] 
+bind "scancode20"     say "Let you parents know you dye after this loze" // [q] 
+bind "scancode15"     say "dog 3rd worlders sent back to slum by first world god by this HS" // [l] 
+bind "scancode12"     say "The browser has you password save. I get you pasword to use on account and make all you little money to my account?" // [i] 
+bind "scancode13"     say "Typikal bottys need to eat food when you play. but cant help me because i play evryday i have slave to eat for me and that slave you bot." // [j] 
+bind "scancode14"     say "I Own develepor this game and you only beg from forgive from me because i have give all hs for free" // [k] 
+bind "scancode20"     "invnext" // [q] Next Weapon
+bind "scancode8"      "+use-beep" // [e] Use with a beep sound (ex. open doors, pick up weapons, plant bomb etc.).
+bind "scancode27"     "+lookatweapon" // [x] Inspect or lower tablet (dangerzone).
+bind "scancode10"     "drop" // [g] Drop weapon.
+bind "scancode11"     "+bomb-drop" // [h] Fast bomb drop.
+bind "scancode21"     "+reload" // [r] Reload.
+bind "scancode23"     "+spray_menu" // [t] Spray.
+bind "mouse1"         "+attack" // Shoot, plant, inject medi-shot, cycle forward and do hand jab [fast punch] (dangerzone).
+bind "mouse2"         "+attack2" // Zoom, toggle silencer/brust, cycle backward and do hand cross [charged punch] (dangerzone).
 
 // Movement
-bind "scancode4"      "+left"                                   // [a] Strafe left.
-bind "scancode7"      "+right"                                  // [d] Strafe right.
-bind "scancode22"     "+back"                                   // [s] Move back.
-bind "scancode26"     "+forward"                                // [w] Move forward.
-bind "scancode225"    "+sprint"                                 // [shift] Walk (slow; no sound).
-bind "scancode44"     "+jump"                                   // [space] Jump <hold for a high jump with ExoJump Boots> (dangerzone).
-bind "scancode226"    "+duck"                                   // [alt] Duck/Crouch
-bind "mouse_x"        "yaw"                                     // Controls the mouse screen movement on vertical axis.
-bind "mouse_y"        "pitch"                                   // Controls the mouse screen movement on horizontal axis.
-bind "x_axis"         "rightleft"                               // Controls the screen movement on axis X.
-bind "y_axis"         "!forwardback"                            // Controls the screen movement on axis Y.
-bind "u_axis"         "yaw"                                     // Controls the screen movement on vertical axis.
-bind "r_axis"         "pitch"                                   // Controls the screen movement on horizontal axis.
+bind "scancode4"      "+left" // [a] Strafe left.
+bind "scancode7"      "+right" // [d] Strafe right.
+bind "scancode22"     "+back" // [s] Move back.
+bind "scancode26"     "+forward" // [w] Move forward.
+bind "scancode225"    "+sprint" // [shift] Walk (slow; no sound).
+bind "scancode44"     "+jump" // [space] Jump <hold for a high jump with ExoJump Boots> (dangerzone).
+bind "scancode226"    "+duck" // [alt] Duck/Crouch
+bind "mouse_x"        "yaw" // Controls the mouse screen movement on vertical axis.
+bind "mouse_y"        "pitch" // Controls the mouse screen movement on horizontal axis.
+bind "x_axis"         "rightleft" // Controls the screen movement on axis X.
+bind "y_axis"         "!forwardback" // Controls the screen movement on axis Y.
+bind "u_axis"         "yaw" // Controls the screen movement on vertical axis.
+bind "r_axis"         "pitch" // Controls the screen movement on horizontal axis.
 
 // Cursor control keys.
-bind "scancode82"     "+forward"                                // [uparrow] Forward.
-bind "scancode81"     "+back"                                   // [downarrow] Back.
-bind "scancode80"     "+turnleft"                               // [leftarrow] Rotate to left (counter-clockwise).
-bind "scancode79"     "+turnright"                              // [rightarrow] Rotate to right (clockwise).
+bind "scancode82"     "+forward" // [uparrow] Forward.
+bind "scancode81"     "+back" // [downarrow] Back.
+bind "scancode80"     "+turnleft" // [leftarrow] Rotate to left (counter-clockwise).
+bind "scancode79"     "+turnright" // [rightarrow] Rotate to right (clockwise).
 
 // Comms and UI
-bind "scancode13"     "callvote"                                // [j] Vote menu.
-bind "scancode16"     "teammenu"                                // [m] Open the team selection menu and the tablet (dangerzone).
-bind "scancode24"     "messagemode2"                            // [y] Team message (chat only with the team).
-bind "scancode28"     "messagemode"                             // [u] Message to all (chat with all).
-bind "scancode5"      "buymenu"                                 // [b] Buy menu/Tablet delivery (dangerzone)
-bind "scancode53"     "toggleconsole"                           // [`] Open the developer console.
-bind "scancode41"     "cancelselect"                            // [esc] Open/close the game menu.
-bind "scancode43"     "+scores-fps"                             // [tab] Scoreboard and fps <hold to show> (dangerzone).
-bind "scancode76"     "sellbackall"                             // [del] Refund all
-bind "mouse3"         "player_ping"                             // Ping
-bind "mouse4"         "+voicerecord"                            // Voice <push to talk; only with teammates in matchmaking>. 
+bind "scancode13"     "callvote" // [j] Vote menu.
+bind "scancode16"     "teammenu" // [m] Open the team selection menu and the tablet (dangerzone).
+bind "scancode24"     "messagemode2" // [y] Team message (chat only with the team).
+bind "scancode28"     "messagemode" // [u] Message to all (chat with all).
+bind "scancode5"      "buymenu" // [b] Buy menu/Tablet delivery (dangerzone)
+bind "scancode53"     "toggleconsole" // [`] Open the developer console.
+bind "scancode41"     "cancelselect" // [esc] Open/close the game menu.
+bind "scancode43"     "+scores-fps" // [tab] Scoreboard and fps <hold to show> (dangerzone).
+bind "scancode76"     "sellbackall" // [del] Refund all
+bind "mouse3"         "player_ping" // Ping
+bind "mouse4"         "+voicerecord" // Voice <push to talk; only with teammates in matchmaking>. 
 
 // Unbound.
-bind "scancode25"     ""                                        // [v] 
-bind "scancode17"     ""                                        // [n] 
-bind "scancode18"     ""                                        // [o] 
-bind "scancode19"     ""                                        // [p] 
-bind "scancode20"     ""                                        // [q] 
-bind "scancode15"     ""                                        // [l] 
-bind "scancode12"     ""                                        // [i] 
-bind "scancode13"     ""                                        // [j] 
-bind "scancode14"     ""                                        // [k] 
-bind "scancode74"     ""                                        // [home] 
-bind "scancode77"     ""                                        // [end] 
-bind "scancode75"     ""                                        // [pgup] 
-bind "scancode78"     ""                                        // [pgdn] 
-bind "scancode71"     ""                                        // [sclk] 
-bind "scancode72"     ""                                        // [pause] 
-bind "scancode57"     ""                                        // [capslock] 
-bind "scancode229"    ""                                        // [rshift]
-bind "scancode224"    ""                                        // [ctrl] 
-bind "scancode228"    ""                                        // [rctrl] 
-bind "scancode40"     ""                                        // [enter] 
-bind "scancode42"     ""                                        // [backspace] 
-bind "scancode73"     ""                                        // [ins] 
-bind "scancode230"    ""                                        // [ralt] 
-bind "scancode46"     ""                                        // [backspace] 
-bind "scancode58"     ""                                        // [f1] 
-bind "scancode59"     ""                                        // [f2] 
-bind "scancode60"     ""                                        // [f3] 
-bind "scancode61"     ""                                        // [f4] 
-bind "scancode62"     ""                                        // [f5] 
-bind "scancode63"     ""                                        // [f6] 
-bind "scancode64"     ""                                        // [f7] 
-bind "scancode65"     ""                                        // [f8] 
-bind "scancode66"     ""                                        // [f9] 
-bind "scancode67"     ""                                        // [f10] 
-bind "scancode68"     ""                                        // [f11] 
-bind "scancode69"     ""                                        // [f12] 
-bind "mwheelup"       ""                                        // 
-bind "mwheeldown"     ""                                        // 
-bind "mouse5"         ""                                        // 
+bind "scancode74"     "" // [home] 
+bind "scancode77"     "" // [end] 
+bind "scancode75"     "" // [pgup] 
+bind "scancode78"     "" // [pgdn] 
+bind "scancode71"     "" // [sclk] 
+bind "scancode72"     "" // [pause] 
+bind "scancode57"     "" // [capslock] 
+bind "scancode229"    "" // [rshift]
+bind "scancode224"    "" // [ctrl] 
+bind "scancode228"    "" // [rctrl] 
+bind "scancode40"     "" // [enter] 
+bind "scancode42"     "" // [backspace] 
+bind "scancode73"     "" // [ins] 
+bind "scancode230"    "" // [ralt] 
+bind "scancode46"     "" // [backspace] 
+bind "scancode58"     "" // [f1] 
+bind "scancode59"     "" // [f2] 
+bind "scancode60"     "" // [f3] 
+bind "scancode61"     "" // [f4] 
+bind "scancode62"     "" // [f5] 
+bind "scancode63"     "" // [f6] 
+bind "scancode64"     "" // [f7] 
+bind "scancode65"     "" // [f8] 
+bind "scancode66"     "" // [f9] 
+bind "scancode67"     "" // [f10] 
+bind "scancode68"     "" // [f11] 
+bind "scancode69"     "" // [f12] 
+bind "mwheelup"       "" // 
+bind "mwheeldown"     "" // 
+bind "mouse5"         "" // 
 
 // Numeric keypad keys.
 //
@@ -144,23 +144,23 @@ bind "mouse5"         ""                                        //
 //
 // <i> An item which has a different name in the other team, can be bought via the other team-side alias.
 // <i> After buying the items, the knife will be automatically equipped for an easier spawn run.
-bind "scancode83"     ""                                        // [numlock] -
-bind "scancode84"     "buy hegrenade; slot3"                    // [/] Buy: High Explosive Grenade.
-bind "scancode85"     "buy flashbang; slot3"                    // [*] Buy: Flashbang.
-bind "scancode86"     "buy smokegrenade; slot3"                 // [-] Buy: Smoke Grenade.
-bind "scancode87"     "buy incgrenade; slot3"                   // [+] Buy: Incendiary Grenade/Molotov.
-bind "scancode88"     "buy defuser; slot3"                      // [enter] Buy: Defuse Kit.
-bind "scancode99"     "buy vest; slot3"                         // [.] Buy: Kevlar Vest.
-bind "scancode98"     "buy vesthelm; slot3"                     // [0] Buy: Kevlar Vest + Helmet.
-bind "scancode89"     "buy secondary1; slot3"                   // [1] Buy: Pistol 2 (starting from 'Other pistols' category).
-bind "scancode90"     "buy secondary2; slot3"                   // [2] Buy: Pistol 3.
-bind "scancode91"     "buy secondary3; slot3"                   // [3] Buy: Pistol 4.
-bind "scancode92"     "buy midtier0; slot3"                     // [4] Buy: Mid-Tier 1.
-bind "scancode93"     "buy midtier1; slot3"                     // [5] Buy: Mid-Tier 2.
-bind "scancode94"     "buy midtier2; slot3"                     // [6] Buy: Mid-Tier 3.
-bind "scancode95"     "buy rifle0; slot3"                       // [7] Buy: Rifle 1.
-bind "scancode96"     "buy rifle1; slot3"                       // [8] Buy: Rifle 2.
-bind "scancode97"     "buy rifle2; slot3"                       // [9] Buy: Rifle 3.
+bind "scancode83"     "" // [numlock] -
+bind "scancode84"     "buy hegrenade; slot3" // [/] Buy: High Explosive Grenade.
+bind "scancode85"     "buy flashbang; slot3" // [*] Buy: Flashbang.
+bind "scancode86"     "buy smokegrenade; slot3" // [-] Buy: Smoke Grenade.
+bind "scancode87"     "buy incgrenade; slot3" // [+] Buy: Incendiary Grenade/Molotov.
+bind "scancode88"     "buy defuser; slot3" // [enter] Buy: Defuse Kit.
+bind "scancode99"     "buy vest; slot3" // [.] Buy: Kevlar Vest.
+bind "scancode98"     "buy vesthelm; slot3" // [0] Buy: Kevlar Vest + Helmet.
+bind "scancode89"     "buy secondary1; slot3" // [1] Buy: Pistol 2 (starting from 'Other pistols' category).
+bind "scancode90"     "buy secondary2; slot3" // [2] Buy: Pistol 3.
+bind "scancode91"     "buy secondary3; slot3" // [3] Buy: Pistol 4.
+bind "scancode92"     "buy midtier0; slot3" // [4] Buy: Mid-Tier 1.
+bind "scancode93"     "buy midtier1; slot3" // [5] Buy: Mid-Tier 2.
+bind "scancode94"     "buy midtier2; slot3" // [6] Buy: Mid-Tier 3.
+bind "scancode95"     "buy rifle0; slot3" // [7] Buy: Rifle 1.
+bind "scancode96"     "buy rifle1; slot3" // [8] Buy: Rifle 2.
+bind "scancode97"     "buy rifle2; slot3" // [9] Buy: Rifle 3.
 
 // Radial radio.
 cl_radial_radio_tab_0_text_1 "#Chatwheel_midplan"              // Ping middle.
