--- a/VerloxsAutoexec/Verloxs/bind.cfg
+++ b/VerloxsAutoexec/Verloxs/bind.cfg
@@ -23,7 +23,7 @@ bind "scancode31"     "slot2"                                   // [2] Equip: Se
 bind "scancode32"     "slot3"                                   // [3] Equip: Knife, Zeus or Hands (dangerzone).
 bind "scancode33"     "slot4"                                   // [4] Equip: Grenades [cycle] (same as 'invnextgrenade').
 bind "scancode34"     "slot5"                                   // [5] Equip: C4 Explosive or Medi-Shot.
-bind "scancode35"     say "𝕚 𝕨𝕚𝕡𝕖 𝕥𝕙𝕖 𝕗𝕝𝕠𝕠𝕣 𝕒𝕗𝕥𝕖𝕣 𝕚 𝕜𝕚𝕝𝕝 𝕪𝕠𝕦 𝕓𝕖𝕔𝕒𝕦𝕤𝕖 𝕚 𝕣𝕖𝕤𝕡𝕖𝕔𝕥 𝕪𝕠𝕦 𝕗𝕒𝕞𝕚𝕝𝕪" // [6] 
+bind "scancode35"     say "Her body is broad and powerful, built for endurance rather than elegance, with thick thighs, strong arms, and a wide back capable of bearing weight." // [6] 
 bind "scancode36"     say "⟁FäÞHr ⟁ MöðhÄr ⟁ SïßLïnðs ⟁ PäK ⟁ TrïBä ⟁ K'LäN ⟁ LÖÝälTï ⟁ ÐëTërMïnäTïÖn ⟁ ŖëĞälïTÿ ⟁ ÕßšëŖvånĆë ⟁ HÕnõŖ ⟁ WïŠðom⟁ ÐRAKä" // [7] 
 bind "scancode37"     say "you are doomed like this boolet coming in high speed to you brain, INSANE IN THE BRAIN. I am chill." // [8]  
 bind "scancode38"     say "Glasses enhanse my gameplay and zoom in when i H$ you in HD and get easy win for my family" // [9] 
