--- a/VerloxsAutoexec/Verloxs/bind.cfg
+++ b/VerloxsAutoexec/Verloxs/bind.cfg
@@ -47,8 +47,10 @@ bind "scancode19"     say "You luckyer that when i hs i would nife you in backst
 bind "scancode20"     say "Let you parents know you dye after this loze" // [q] 
 bind "scancode15"     say "dog 3rd worlders sent back to slum by first world god by this HS" // [l] 
 bind "scancode12"     say "The browser has you password save. I get you pasword to use on account and make all you little money to my account?" // [i] 
-bind "scancode13"     say "Typikal bottys need to eat food when you play. but cant help me because i play evryday i have slave to eat for me and that slave you bot." // [j] 
+bind "scancode13"     say "get guwwwwwwwwddddddddddddDDDDDDDDDDDDDDDDDDD" // [j] 
 bind "scancode14"     say "I Own develepor this game and you only beg from forgive from me because i have give all hs for free" // [k] 
+bind "scancode13"     say "" // [j] 
+bind "scancode16"     say "" // [m] 
 bind "scancode8"      "+use-beep" // [e] Use with a beep sound (ex. open doors, pick up weapons, plant bomb etc.).
 bind "scancode27"     "+lookatweapon" // [x] Inspect or lower tablet (dangerzone).
 bind "scancode10"     "drop" // [g] Drop weapon.
@@ -80,8 +82,6 @@ bind "scancode80"     "+turnleft" // [leftarrow] Rotate to left (counter-clockwi
 bind "scancode79"     "+turnright" // [rightarrow] Rotate to right (clockwise).
 
 // Comms and UI
-bind "scancode13"     "callvote" // [j] Vote menu.
-bind "scancode16"     "teammenu" // [m] Open the team selection menu and the tablet (dangerzone).
 bind "scancode24"     "messagemode2" // [y] Team message (chat only with the team).
 bind "scancode28"     "messagemode" // [u] Message to all (chat with all).
 bind "scancode5"      "buymenu" // [b] Buy menu/Tablet delivery (dangerzone)
