--- a/VerloxsAutoexec/Verloxs/bind.cfg
+++ b/VerloxsAutoexec/Verloxs/bind.cfg
@@ -44,7 +44,7 @@ bind "scancode25"     say "Breasts & Hips: Voluptuous in general." // [v]
 bind "scancode17"     say "My unmatched perspicacity coupled with sheer indefatigability makes me a feared opponent in any realm of human endeavor." // [n] 
 bind "scancode18"     say "If you would just get up and teach them instead of handing them a friggin packet, yo. There’s kids in here that don’t learn like that. They need to learn face to face." // [o] 
 bind "scancode19"     say "You luckyer that when i hs i would nife you in backstab" // [p] 
-bind "scancode20"     say "Let you parents know you dye after this loze" // [q] 
+bind "scancode20"     say "ct sided map nigga you get youll turns" // [q] 
 bind "scancode15"     say "dog 3rd worlders sent back to slum by first world god by this HS" // [l] 
 bind "scancode12"     say "The browser has you password save. I get you pasword to use on account and make all you little money to my account?" // [i] 
 bind "scancode13"     say "get guwwwwwwwwddddddddddddDDDDDDDDDDDDDDDDDDD" // [j] 
